fix: masonry on safari [#1982]

--- a/assets/scss/elements/blog/_blogpost-grid.scss
+++ b/assets/scss/elements/blog/_blogpost-grid.scss
@@ -1,3 +1,3 @@
-.layout-grid > .article-content-col, .layout-grid > .article-content-col .content {
+body:not(.neve-is-masonry) .layout-grid > .article-content-col, .layout-grid > .article-content-col .content {
   height: 100%;
 }
